# fedora-badges-server

./: .gitignore  README.md  TAHRIR.md  Vagrantfile  doformat.sh  pyproject.toml  tox.ini
badges_server/: __init__.py  exceptions.py  main.py  util.py
badges_server/conf/: logrdata.py  standard.py
badges_server/config/: logrdata.py  standard.py
badges_server/database/: util.py
badges_server/database/data/: __init__.py  formatdb.py
badges_server/database/form/: user.py
badges_server/database/intr/: __init__.py  user.py
badges_server/database/migr/: env.py  main.py
badges_server/database/objs/: __init__.py  access.py  accolade.py  granting.py  invitation.py  provider.py  type.py  user.py
badges_server/interactions/: user.py
badges_server/system/: auth.py  common.py  database.py  main.py
badges_server/system/models/: access.py  accolade.py  type.py  user.py
badges_server/system/router/: access.py  accolade.py  type.py  user.py
badgesdb/: __init__.py  main.py  util.py
badgesdb/conf/: __init__.py  logrdata.py  standard.py
badgesdb/data/: __init__.py  formatdb.py
badgesdb/form/: __init__.py  user.py
badgesdb/intr/: __init__.py  user.py
badgesdb/migr/: env.py  main.py  scrt.py.mako
badgesdb/objs/: __init__.py  accolade.py  granting.py  invitation.py  provider.py  type.py  user.py
devel/ansible/: ansible.cfg  badgesserver.yml
devel/ansible/badgesserver/files/: .bashrc  badges_server.service  config.py
devel/ansible/badgesserver/tasks/: main.yml
docs/: BADGES.md  BGDIAG.md  TABLES.md  TABLES_BG.md  TABLES_TR.md  TAHRIR.md  TRDIAG.md  dber.drawio  mdrn.drawio
legacydb/: ERDIAG.md  README.md  dber.drawio
tests/: conftest.py
tests/system/router/: base.py  test_user.py
(+1 files in other folders)
