[tool.poetry]
name = "badgesdb"
version = "0.1.0"
description = "Schema and interactions for the central database entity related to the Fedora Badges system abstracted with libraries like SQLAlchemy, Alembic and Psycopg2"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://gitlab.com/fedora/websites-apps/fedora-badges/database-models"
repository = "https://gitlab.com/fedora/websites-apps/fedora-badges/database-models"
documentation = "https://gitlab.com/fedora/websites-apps/fedora-badges/database-models/-/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
SQLAlchemy = "^2.0.16"
click = ">=8.0.0,<9"
asyncio = "^3.4.3"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.10.1"
pytest = "^7.1.3"
flake8 = "<6.0.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^3.0.0"
tox = "^4.0.0"
bandit = "^1.7.4"
pre-commit = "^3.3.3"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 100
asyncio_mode = "auto"

[tool.bandit]
tests = ["B201", "B301"]

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
fix = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
badgesdb = "badgesdb.main:main"
